--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -4,69 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e2eee1"
     tools:context=".DisplayActivity">
 
     <TextView
         android:id="@+id/txtCod"
-        android:layout_width="330dp"
-        android:layout_height="42dp"
+        android:layout_width="298dp"
+        android:layout_height="69dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Codigo"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtCodPai"
+        android:textColor="#191919"
+        android:textSize="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtDesc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.133" />
+        app:layout_constraintVertical_bias="0.428" />
 
     <TextView
         android:id="@+id/txtCodPai"
-        android:layout_width="330dp"
+        android:layout_width="134dp"
         android:layout_height="42dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="60dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Codigo Pai"
+        android:textColor="#191919"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/txtNivel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.641"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtDesc"
         android:layout_width="330dp"
-        android:layout_height="116dp"
-        android:layout_marginBottom="36dp"
+        android:layout_height="106dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Descrição"
+        android:textColor="#464646"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/txtNivel"
+        app:layout_constraintBottom_toTopOf="@+id/txtCodPai"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txtNivel"
-        android:layout_width="88dp"
-        android:layout_height="38dp"
+        android:layout_width="73dp"
+        android:layout_height="31dp"
         android:layout_marginBottom="52dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Nivel"
+        android:textColor="#191919"
         android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/checkBox"
+        app:layout_constraintBottom_toTopOf="@+id/chkSub"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.031"
+        app:layout_constraintHorizontal_bias="0.228"
         app:layout_constraintStart_toStartOf="parent" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/chkSub"
         android:layout_width="187dp"
         android:layout_height="41dp"
         android:layout_marginBottom="92dp"
@@ -77,6 +82,42 @@
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.035"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Nivel:"
+        android:textColor="#464646"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/chkSub"
+        app:layout_constraintEnd_toStartOf="@+id/txtNivel"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.545" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Codigo Pai:"
+        android:textColor="#464646"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtNivel"
+        app:layout_constraintEnd_toStartOf="@+id/txtCodPai"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDesc"
+        app:layout_constraintVertical_bias="0.117" />
 </android.support.constraint.ConstraintLayout>
