--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -20,16 +20,15 @@
         android:textSize="50dp"
         app:layout_constraintBottom_toTopOf="@+id/txtDesc"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.114"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtCodPai"
         android:layout_width="134dp"
         android:layout_height="42dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="28dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Codigo Pai"
@@ -37,14 +36,14 @@
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/txtNivel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.641"
+        app:layout_constraintHorizontal_bias="0.735"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txtDesc"
         android:layout_width="330dp"
-        android:layout_height="106dp"
-        android:layout_marginBottom="16dp"
+        android:layout_height="127dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Descrição"
@@ -52,14 +51,14 @@
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/txtCodPai"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.21"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txtNivel"
         android:layout_width="73dp"
         android:layout_height="31dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Nivel"
@@ -67,7 +66,7 @@
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/chkSub"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.228"
+        app:layout_constraintHorizontal_bias="0.247"
         app:layout_constraintStart_toStartOf="parent" />
 
     <CheckBox
@@ -98,15 +97,15 @@
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/chkSub"
         app:layout_constraintEnd_toStartOf="@+id/txtNivel"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.38"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.545" />
+        app:layout_constraintVertical_bias="0.491" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="33dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -116,8 +115,8 @@
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/txtNivel"
         app:layout_constraintEnd_toStartOf="@+id/txtCodPai"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.205"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDesc"
-        app:layout_constraintVertical_bias="0.117" />
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
