--- a/app/src/main/res/layout/activity_display.xml
+++ b/app/src/main/res/layout/activity_display.xml
@@ -28,7 +28,7 @@
         android:id="@+id/txtCodPai"
         android:layout_width="134dp"
         android:layout_height="42dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Codigo Pai"
@@ -42,7 +42,7 @@
     <TextView
         android:id="@+id/txtDesc"
         android:layout_width="330dp"
-        android:layout_height="127dp"
+        android:layout_height="166dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -58,7 +58,7 @@
         android:id="@+id/txtNivel"
         android:layout_width="73dp"
         android:layout_height="31dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Nivel"
@@ -66,14 +66,14 @@
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/chkSub"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.247"
+        app:layout_constraintHorizontal_bias="0.233"
         app:layout_constraintStart_toStartOf="parent" />
 
     <CheckBox
         android:id="@+id/chkSub"
         android:layout_width="187dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="92dp"
+        android:layout_marginBottom="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:enabled="false"
@@ -117,6 +117,5 @@
         app:layout_constraintEnd_toStartOf="@+id/txtCodPai"
         app:layout_constraintHorizontal_bias="0.205"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDesc"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDesc" />
 </android.support.constraint.ConstraintLayout>
