--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,11 +5,7 @@
 
     <group android:checkableBehavior="single">
     <item
-        android:id="@+id/historico"
-        android:icon="@drawable/ic_history_icon"
-        android:title="Histórico" />
-    <item
-        android:id="@+id/suporte"
+        android:id="@+id/nav_suporte"
         android:icon="@drawable/ic_info_icon"
         android:title="Suporte" />
     </group>
